// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JWS createJWS can canonicalize a JSON payload 1`] = `"eyJhbGciOiJFUzI1NksifQ.eyJhIjoiYSIsInoiOiJ6In0.GfYZM1spIsu9_eRhSyfW0lo6LRBu2QFFzjtXmKIJTtNGkAMqaP3uIbxRfO7X5yHUaXoobFJeEK-1QRQB_OBL3g"`;

exports[`JWS createJWS works with JSON payload 1`] = `"eyJhbGciOiJFUzI1NksifQ.eyJzb21lIjoiZGF0YSJ9.6JKblpgRCZcTO9q8NMb_f7O1SZjVP0k0K6ty4fiROg9RNqjHTXrBCj_L7GBFEapNjw-Bl9zykgmwBXaqDWKayw"`;

exports[`JWS createJWS works with base64url payload 1`] = `"eyJhbGciOiJFUzI1NksifQ.AxTFjlgcdla6FTGVZp_kzlP_eN1e3mCkA5dxqQxYy0He.0roYfhILFrM7_MjLdEeRyrIWK_KhoRzV9SQoIXLza-oH3r2aRj4ulCT9Sd45uwjwDc0CQmo4z21VZF1H4cc3pw"`;

exports[`createJWT() ES256 creates a JWT with correct format 1`] = `
Object {
  "data": "eyJhbGciOiJFUzI1NiIsInR5cCI6IkpXVCJ9.eyJpYXQiOjE0ODUzMjExMzMsInJlcXVlc3RlZCI6WyJuYW1lIiwicGhvbmUiXSwiaXNzIjoiZGlkOmV0aHI6MHg0MWE2ZjkyY2NhN2I3ZTcyN2FiMzlhOGZhZjUxMmI1MzAzMTZjMzk1In0",
  "header": Object {
    "alg": "ES256",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": 1485321133,
    "iss": "did:ethr:0x41a6f92cca7b7e727ab39a8faf512b530316c395",
    "requested": Array [
      "name",
      "phone",
    ],
  },
  "signature": "ZGS7kklimLNTy2xLRLeVM17aIj52Yy3dpTvt9KSYwK2eS7KV5u_9V7iGWpua1d53DmSodF3JRFiZvMf8erfkOw",
}
`;

exports[`createJWT() ES256 creates a JWT with correct legacy format 1`] = `
Object {
  "data": "eyJhbGciOiJFUzI1NiIsInR5cCI6IkpXVCJ9.eyJpYXQiOjE0ODUzMjExMzMsInJlcXVlc3RlZCI6WyJuYW1lIiwicGhvbmUiXSwiaXNzIjoiMHg0MWE2ZjkyY2NhN2I3ZTcyN2FiMzlhOGZhZjUxMmI1MzAzMTZjMzk1In0",
  "header": Object {
    "alg": "ES256",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": 1485321133,
    "iss": "0x41a6f92cca7b7e727ab39a8faf512b530316c395",
    "requested": Array [
      "name",
      "phone",
    ],
  },
  "signature": "jRkWdcLbLS-aeog1-JLE7bRou02Lx1zFxsLSpWoz5wWbTPLk9zQYlIPE1MOlczWITn4sXkhoVwMQQB1FBKCtsg",
}
`;

exports[`createJWT() Ed25519 creates a JWT with correct format 1`] = `
Object {
  "data": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFZDI1NTE5In0.eyJpYXQiOjE0ODUzMjExMzMsInJlcXVlc3RlZCI6WyJuYW1lIiwicGhvbmUiXSwiaXNzIjoiZGlkOm5hY2w6QnZyQjhpSkF6XzFqZnExbVJ4aUVLZnI5cWNuTGZxNURPR3JCZjJFUlVIVSJ9",
  "header": Object {
    "alg": "Ed25519",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": 1485321133,
    "iss": "did:nacl:BvrB8iJAz_1jfq1mRxiEKfr9qcnLfq5DOGrBf2ERUHU",
    "requested": Array [
      "name",
      "phone",
    ],
  },
  "signature": "ZoPf01SxW2n5zngunI942FpviEMP6jBZZb9NJ27M_K7AcmjPeeLH8bm2lv0INmJ2u98JVSzELF8YLWQvPYB1Bw",
}
`;

exports[`verifyJWT() accepts a valid audience 1`] = `
Object {
  "aud": "did:ethr:0x20c769ec9c0996ba7737a4826c2aaff00b1b2040",
  "iat": 1485321133,
  "iss": "did:ethr:0x41a6f92cca7b7e727ab39a8faf512b530316c395",
}
`;

exports[`verifyJWT() accepts a valid audience using callback_url 1`] = `
Object {
  "aud": "http://pututu.uport.me/unique",
  "iat": 1485321133,
  "iss": "did:ethr:0x41a6f92cca7b7e727ab39a8faf512b530316c395",
}
`;

exports[`verifyJWT() accepts multiple audiences 1`] = `
Object {
  "aud": Array [
    "did:ethr:0x41a6f92cca7b7e727ab39a8faf512b530316c395",
    "did:ethr:0x20c769ec9c0996ba7737a4826c2aaff00b1b2040",
  ],
  "iat": 1485321133,
  "iss": "did:ethr:0x41a6f92cca7b7e727ab39a8faf512b530316c395",
}
`;

exports[`verifyJWT() handles ES256 algorithm with blockchainAccountId - github #14, #155 1`] = `
Object {
  "hello": "world",
  "iat": 1485321133,
  "iss": "did:ethr:0x20c769ec9c0996ba7737a4826c2aaff00b1b2040",
}
`;

exports[`verifyJWT() handles ES256 algorithm with ethereum address - github #14 1`] = `
Object {
  "hello": "world",
  "iat": 1485321133,
  "iss": "did:ethr:0x20c769ec9c0996ba7737a4826c2aaff00b1b2040",
}
`;

exports[`verifyJWT() handles ES256-R algorithm 1`] = `
Object {
  "hello": "world",
  "iat": 1485321133,
  "iss": "did:ethr:0x41a6f92cca7b7e727ab39a8faf512b530316c395",
}
`;

exports[`verifyJWT() handles ES256-R algorithm with publicKeyHex address 1`] = `
Object {
  "hello": "world",
  "iat": 1485321133,
  "iss": "did:ethr:0x20c769ec9c0996ba7737a4826c2aaff00b1b2040",
}
`;

exports[`verifyJWT() pregenerated JWT verifies the JWT and return correct payload 1`] = `
Object {
  "iat": 1485321133,
  "iss": "did:ethr:0x41a6f92cca7b7e727ab39a8faf512b530316c395",
  "requested": Array [
    "name",
    "phone",
  ],
}
`;

exports[`verifyJWT() pregenerated JWT with legacy resolver verifies the JWT and return correct payload 1`] = `
Object {
  "iat": 1485321133,
  "iss": "did:ethr:0x90e45d75bd1246e0924872018647dba996a8e7b9",
  "requested": Array [
    "name",
    "phone",
  ],
}
`;
